--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react-test-renderer": "^16.12.0"
   },
   "dependencies": {
+    "await-to-js": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-portal": "^4.2.1",
-    "spanify": "^1.4.0"
+    "regenerator-runtime": "^0.13.3",
+    "spanify": "^1.4.0",
+    "unfetch": "^4.1.0"
   }
 }
