--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "lodash.isempty": "^4.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-portal": "^4.2.1",
