--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "d3-scale": "^3.2.1",
     "lodash.isempty": "^4.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
