--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash.isempty": "^4.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-inlinesvg": "^1.2.0",
     "react-portal": "^4.2.1",
     "regenerator-runtime": "^0.13.3",
     "spanify": "^1.4.0",
